@@ -1,3 +1,8 @@
+2006-09-23  Chong Yidong  <cyd@stupidchicken.com>
+
+	* help.el (describe-key-briefly, describe-key): Don't expect an
+	extra up event if a down-event is generated by a popup menu.
+
 2006-09-23  Michal Nazarewicz  <mnazarewicz@gmail.com> (tiny change)
 
 	* textmodes/ispell.el (ispell-change-dictionary): Don't check the
